--- a/index.html
+++ b/index.html
@@ -27,6 +27,22 @@
             </nav>
         </div>
     </header>
+
+    <section class="introducao">
+        <div class="container">
+            <h1>Bicicletas Feitas a Mão</h1>
+            <blockquote class="quote-externo">
+                <p>
+                    "não tenha nada em sua casa que você não considere útil ou acreditar ser bonito"
+                </p>
+                <cite>WILLIAM MORRIS</cite>
+            </blockquote>
+            <a href="produtos.html" class="btn">Orçamentos</a>
+        </div>
+    </section>
+
+
+
 </body>
 
 </html>
