--- a/index.html
+++ b/index.html
@@ -77,6 +77,28 @@
 
     </section>
 
+    <section class="portifolio">
+        <div class="container">
+            <h2 class="subtitulo">Portfólio</h2>
+            <ul class="portifolio_lista">
+                <li class="grid-8">
+                    <img src="img/portfolio/retro.jpg" alt="Bicicleta Retro">
+                </li>
+                <li class="grid-8">
+                    <img src="img/portfolio/passeio.jpg" alt="Bicicleta Passeio">
+                </li>
+                <li class="grid-16">
+                    <img src="img/portfolio/esporte.jpg" alt="Bicicleta Esporte">
+                </li>
+            </ul>
+        </div>
+
+        <div class="call">
+            <p>conheça mais o nosso portfólio</p>
+            <a href="produtos.html" class="btn"> Produtos</a>
+        </div>
+
+    </section>
 
 </body>
 
