--- a/index.html
+++ b/index.html
@@ -100,7 +100,6 @@
 
     </section>
 
-
     <section class="qualidade container">
         <h2 class="subtitulo">Qualidade</h2>
         <img src="img/bikcraft-qualidade.svg" alt="Bikcraft qualidade">
@@ -127,6 +126,60 @@
         </div>
 
     </section>
+
+    <section class="quebra">
+        <blockquote class="quote-externo container">
+            <p>
+                "o verdadeiro segredo da felicidade esta em ter um genuíno interesse por todos os detalhes da vida
+                cotidiana"
+            </p>
+            <cite>WILLIAM MORRIS</cite>
+        </blockquote>
+    </section>
+
+    <footer>
+        <div class="footer">
+            <div class="container">
+
+                <div class="grid-8 footer_historia">
+                    <h3>Nossa história</h3>
+                    <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Aliquam id sit amet, consectetur.
+                        Lorem ipsum dolor sit amet, consectetur adipiscing elit. Aliquam id sit amet, consectetur.
+                    </p>
+                </div>
+
+                <div class="grid-4 footer_contato">
+                    <h3>Contato</h3>
+                    <ul>
+                        <li>21 2323-4343</li>
+                        <li>contato@bikcraft.com</li>
+                        <li>Botafogo - RJ</li>
+                    </ul>
+                    </p>
+                </div>
+
+                <div class="grid-4 footer_redes">
+                    <h3>Redes Sociais</h3>
+                    <ul>
+                        <li><a href="https://pt-br.facebook.com/" target="_blank"><img
+                                    src="img/redes-sociais/facebook.svg" alt="link facebook"></a></li>
+                        <li><a href="https://www.instagram.com/?hl=pt-br" target="_blank"><img
+                                    src="img/redes-sociais/instagram.svg" alt="link instagram"></a></li>
+                        <li><a href="https://mobile.twitter.com/login?lang=pt" target="_blank"><img
+                                    src="img/redes-sociais/twitter.svg" alt="link twitter"></a></li>
+                    </ul>
+                    </p>
+                </div>
+
+            </div>
+
+            <div class="copy">
+                <div class="container">
+                    <p class="grid-16">Bikcraft 2020 - Alguns direitos reservados</p>
+                </div>
+            </div>
+        </div>
+    </footer>
 
 </body>
 
