--- a/produtos.html
+++ b/produtos.html
@@ -20,8 +20,8 @@
             </a>
             <nav class="grid-12 header_menu">
                 <ul>
-                    <li><a href="sobre.html" class="menu_ativo">Sobre</a></li>
-                    <li><a href="produtos.html">Produtos</a></li>
+                    <li><a href="sobre.html">Sobre</a></li>
+                    <li><a href="produtos.html" class="menu_ativo">Produtos</a></li>
                     <li><a href="portifolio.html">Portifolio</a></li>
                     <li><a href="contato.html">Contato</a></li>
                 </ul>
@@ -114,6 +114,36 @@
         </div>
     </section>
 
+    <section class="orcamento">
+        <div class="container">
+            <h2 class="subtitulo">Orçamento</h2>
+            <form action="" id="form_orcamento" class="formulario_orcamento grid-8">
+                <label for="nome">Nome</label>
+                <input type="text" id="nome">
+                <label for="email">E-mail</label>
+                <input type="text" id="email">
+                <label for="telefone">Telefone</label>
+                <input type="text" id="telefone">
+                <label for="espec">Especificações</label>
+                <textarea type="text" id="espec"></textarea>
+                <button type="submit" class="btn">Enviar</button>
+            </form>
+            <div class="orcamento_dados grid-8">
+                <h3>Dados</h3>
+                <span>+55 21 93223 3232</span>
+                <span class="dados_email">loremipsun@bikcraft.com.br</span>
+                <h3>Monte a sua Bikcraft</h3>
+                <p>Escolha as especificações</p>
+                <ul>
+                    <li>- Cores</li>
+                    <li>- Estilo</li>
+                    <li>- Medidas</li>
+                    <li>- Acessórios</li>
+                    <li>- E Outros</li>
+                </ul>
+            </div>
+        </div>
+    </section>
 
     <section class="quebra">
         <blockquote class="quote-externo container">
