--- a/produtos.html
+++ b/produtos.html
@@ -22,7 +22,7 @@
                 <ul>
                     <li><a href="sobre.html">Sobre</a></li>
                     <li><a href="produtos.html" class="menu_ativo">Produtos</a></li>
-                    <li><a href="portifolio.html">Portifolio</a></li>
+                    <li><a href="portfolio.html">Portfólio</a></li>
                     <li><a href="contato.html">Contato</a></li>
                 </ul>
             </nav>
@@ -131,7 +131,7 @@
             <div class="orcamento_dados grid-8">
                 <h3>Dados</h3>
                 <span>+55 21 93223 3232</span>
-                <span class="dados_email">loremipsun@bikcraft.com.br</span>
+                <span>loremipsun@bikcraft.com.br</span>
                 <h3>Monte a sua Bikcraft</h3>
                 <p>Escolha as especificações</p>
                 <ul>
