Adicionando plugin slide

--- a/index.html
+++ b/index.html
@@ -10,6 +10,7 @@
     <link rel="stylesheet" href="css/grid.css">
     <link rel="stylesheet" href="css/style.css">
     <link rel="stylesheet" href="css/responsivo.css">
+    <link rel="stylesheet" href="css/simple-slide.css">
 </head>
 
 <body>
@@ -183,5 +184,10 @@
     </footer>
 
 </body>
+
+
+<script src="./js/simple-slide.js"></script>
+<script src="./js/script.js"></script>
+
 
 </html>
