--- a/portfolio.html
+++ b/portfolio.html
@@ -10,7 +10,7 @@
     <link rel="stylesheet" href="css/grid.css">
     <link rel="stylesheet" href="css/style.css">
     <link rel="stylesheet" href="css/portfolio.css">
-     <link rel="stylesheet" href="css/responsivo.css">
+    <link rel="stylesheet" href="css/responsivo.css">
 </head>
 
 <body>
@@ -37,7 +37,7 @@
         </div>
     </section>
 
-    <section class="container">
+    <section class="container" data-slide="quote">
         <blockquote class="quote_clientes">
             <p>
                 "No mundo atual, a contínua expansão de nossa atividade cumpre um papel essencial na formulação da
@@ -45,16 +45,45 @@
             </p>
             <cite>Barbara Moss</cite>
         </blockquote>
+
+
+        <blockquote class="quote_clientes">
+            <p>
+                "Dar um role da minha bike do bikcraft é a melhor escolha que eu faço durante o dia."
+            </p>
+            <cite>Giorgia Pereira</cite>
+        </blockquote>
+
+        <blockquote class="quote_clientes">
+            <p>
+                "As bicicletas do bikcraft são as mais bonitas e resistentes que eu já andei."
+            </p>
+            <cite>Gustavo Davejones</cite>
+        </blockquote>
+
+
+
     </section>
 
     <section class="portifolio">
-        <div class="container">
+        <div class="container" data-slide="portfolio" >
             <ul class="portifolio_lista">
                 <li class="grid-8">
                     <img src="img/portfolio/retro.jpg" alt="Bicicleta Retro">
                 </li>
                 <li class="grid-8">
                     <img src="img/portfolio/passeio.jpg" alt="Bicicleta Passeio">
+                </li>
+                <li class="grid-16">
+                    <img src="img/portfolio/esporte.jpg" alt="Bicicleta Esporte">
+                </li>
+            </ul>
+            <ul class="portifolio_lista">
+                <li class="grid-8">
+                    <img src="img/portfolio/passeio.jpg" alt="Bicicleta Retro">
+                </li>
+                <li class="grid-8">
+                    <img src="img/portfolio/retro.jpg" alt="Bicicleta Passeio">
                 </li>
                 <li class="grid-16">
                     <img src="img/portfolio/esporte.jpg" alt="Bicicleta Esporte">
@@ -119,5 +148,7 @@
     </footer>
 
 </body>
+<script src="./js/simple-slide.js"></script>
+<script src="./js/script.js"></script>
 
 </html>
