Adicionando animações na pagina principal

--- a/portfolio.html
+++ b/portfolio.html
@@ -11,6 +11,7 @@
     <link rel="stylesheet" href="css/style.css">
     <link rel="stylesheet" href="css/portfolio.css">
     <link rel="stylesheet" href="css/responsivo.css">
+    <link rel="stylesheet" href="css/simple-anime.css">
 </head>
 
 <body>
@@ -149,6 +150,7 @@
 
 </body>
 <script src="./js/simple-slide.js"></script>
+<script src="./js/simple-anime.js"></script>
 <script src="./js/script.js"></script>
 
 </html>
