--- a/contato.html
+++ b/contato.html
@@ -11,6 +11,7 @@
     <link rel="stylesheet" href="css/style.css">
     <link rel="stylesheet" href="css/contato.css">
      <link rel="stylesheet" href="css/responsivo.css">
+     <link rel="stylesheet" href="css/simple-anime.css">
 </head>
 
 <body>
@@ -130,5 +131,7 @@
     </footer>
 
 </body>
+<script src="./js/simple-anime.js"></script>
+<script src="./js/script.js"></script>
 
 </html>
