--- a/index.html
+++ b/index.html
@@ -11,6 +11,7 @@
     <link rel="stylesheet" href="css/style.css">
     <link rel="stylesheet" href="css/responsivo.css">
     <link rel="stylesheet" href="css/simple-slide.css">
+    <link rel="stylesheet" href="css/simple-anime.css">
 </head>
 
 <body>
@@ -32,18 +33,18 @@
 
     <section class="introducao">
         <div class="container">
-            <h1>Bicicletas Feitas a Mão</h1>
+            <h1 data-anime="400" class="fadeInDown"> Bicicletas Feitas a Mão</h1>
             <blockquote class="quote-externo">
                 <p>
                     "não tenha nada em sua casa que você não considere útil ou acreditar ser bonito"
                 </p>
                 <cite>WILLIAM MORRIS</cite>
             </blockquote>
-            <a href="produtos.html" class="btn">Orçamentos</a>
+            <a data-anime="1200" href="produtos.html" class="btn fadeInDown">Orçamentos</a>
         </div>
     </section>
 
-    <section class="produtos container">
+    <section class="produtos container fadeInDown"   data-anime="1600">
         <h2 class="subtitulo">Produtos</h2>
         <ul class="produtos_lista">
 
@@ -187,6 +188,7 @@
 
 
 <script src="./js/simple-slide.js"></script>
+<script src="./js/simple-anime.js"></script>
 <script src="./js/script.js"></script>
 
 
