--- a/sobre.html
+++ b/sobre.html
@@ -11,6 +11,7 @@
     <link rel="stylesheet" href="css/style.css">
     <link rel="stylesheet" href="css/sobre.css">
      <link rel="stylesheet" href="css/responsivo.css">
+     <link rel="stylesheet" href="css/simple-anime.css">
 </head>
 
 <body>
@@ -139,5 +140,7 @@
     </footer>
 
 </body>
+<script src="./js/simple-anime.js"></script>
+<script src="./js/script.js"></script>
 
 </html>
